# wgsim-rs

./: Cargo.toml  README.md
examples/screen-fit-contain-image/: main.rs  render.wgsl
examples/screen-image/: main.rs
src/: app.rs  ctx.rs  gif.rs  lib.rs  ppl.rs  primitive.rs  render.rs  surface_cfg.rs  util.rs
