[package]
name    = "wgsim"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-intrusive = "0.5.0"
gif               = "0.13.1"
indicatif         = "0.17.9"
pollster          = "0.4.0"
wgpu              = "23.0.1"
winit             = "0.30.7"

[dev-dependencies]
bytemuck   = "1.21.0"
env_logger = "0.11.6"
image      = "0.25.5"
